--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ openai==1.97.0
 outcome==1.3.0.post0
 packaging==25.0
 pillow==11.3.0
+pip==25.1.1
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
@@ -54,8 +55,8 @@ tldextract==5.3.0
 tqdm==4.67.1
 trio==0.30.0
 trio-websocket==0.12.2
-typing-inspection==0.4.1
 typing_extensions==4.14.1
+typing-inspection==0.4.1
 urllib3==2.5.0
 webdriver-manager==4.0.2
 websocket-client==1.8.0
